# execution

./: Cargo.toml
.github/workflows/: ci.yml
.tickets/: et-03b4.md  et-12c8.md  et-71ae.md  et-82a3.md  et-991c.md  et-9dae.md  et-b004.md  et-bc6c.md  et-c4e0.md  et-cb4b.md  et-d900.md  et-e5a1.md  et-eaf4.md  et-f295.md  et-f597.md  et-fe3c.md  exe-23je.md
docs/: overview.md  v1_spec.md
execution_graph/: Cargo.toml
execution_graph/src/: dirty.rs  dispatch.rs  graph.rs  lib.rs  plan.rs  pretty.rs  tape_access.rs
execution_graph_examples/: Cargo.toml
execution_graph_wind_tunnel/: Cargo.toml
execution_graph_wind_tunnel/benches/: assemblies.rs  graph.rs
execution_tape/: Cargo.toml  opcodes.json
execution_tape/examples/: disasm.rs
execution_tape/src/: aggregates.rs  asm.rs  bytecode.rs  bytecode_decode_gen.rs  bytecode_encode_gen.rs  bytecode_instr_gen.rs  bytecode_reads_writes_gen.rs  codec.rs  codec_primitives.rs  disasm.rs  format.rs  host.rs  host_catalog.rs  inputs.rs  instr_operands.rs  instr_operands_gen.rs  lib.rs  opcode.rs  opcodes_gen.rs  program.rs  program_memory.rs  trace.rs  typed.rs  value.rs  verifier.rs  vm.rs
execution_tape/src/analysis/: bitset.rs  cfg.rs  dataflow.rs  liveness.rs  mod.rs
execution_tape_codegen/: Cargo.toml
execution_tape_codegen/src/: main.rs
execution_tape_conformance/: Cargo.toml
execution_tape_conformance/tests/: conformance.rs
execution_tape_profiling/: Cargo.toml
execution_tape_profiling/examples/: tracy_simple.rs
execution_tape_profiling/tests/: trace_stream.rs
execution_tape_wind_tunnel/: Cargo.toml
execution_tape_wind_tunnel/benches/: vm.rs
