[package]
name = "execution_graph"
description = "Incremental execution graph built on execution_tape"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["vm", "bytecode", "no_std", "incremental"]
categories = ["no-std", "virtualization"]

[features]
default = []
std = []

[lints]
workspace = true

[dependencies]
execution_tape = { path = "../execution_tape" }
hashbrown = { default-features = false, features = [
  "default-hasher",
], version = "0.16.1" }
understory_dirty = { git = "https://github.com/endoli/understory.git", rev = "e66fecdc521b57b76bb3b28ddc70ce3944926664" }
