[package]
name = "execution_graph"
description = "Incremental execution graph built on execution_tape"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["vm", "bytecode", "no_std", "incremental"]
categories = ["no-std", "virtualization"]

[features]
default = []
std = []

[lints]
workspace = true

[dependencies]
execution_tape = { path = "../execution_tape" }
hashbrown = { default-features = false, features = [
  "default-hasher",
], version = "0.17.0" }
invalidation = "0.2.0"
