[package]
name = "execution_graph_examples"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
execution_graph = { workspace = true, features = ["std"] }
execution_tape = { workspace = true }
