[package]
name = "execution_graph_wind_tunnel"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
execution_graph = { path = "../execution_graph", features = ["std"] }
execution_tape = { path = "../execution_tape", features = ["std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "assemblies"
harness = false
