[package]
name = "execution_graph_wind_tunnel"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
execution_graph = { workspace = true, features = ["std"] }
execution_tape = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "graph"
harness = false
