[package]
name = "execution_tape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable, verifiable register VM bytecode format and runtime (draft)."
readme = "README.md"
keywords = ["vm", "bytecode", "no_std", "serialization"]
categories = ["no-std", "virtualization"]

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
