[package]
name = "execution_tape_profiling"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Profiling adapters for execution_tape (currently Tracy)."
readme = "README.md"
keywords = ["profiling", "tracing", "vm"]
categories = ["development-tools::profiling"]

[dependencies]
execution_tape = { workspace = true }
tracy-client = "0.18"

[lints]
workspace = true
